--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 <body>
     <div class="container">
         <div class="meme-container">
-            <img src="./webwxgetmsgimg.gif" alt="奶茶表情包" class="meme-img">
+            <img src="https://mp-866e9a10-30b1-4c7f-b03f-338020a6dbf1.cdn.bspapp.com/static/images/webwxgetmsgimg.gif" alt="奶茶表情包" class="meme-img">
         </div>
         
         <div class="invitation-text">
@@ -540,4 +540,5 @@
         });
     </script>
 </body>
+
 </html>
