--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 <body>
     <div class="container">
         <div class="meme-container">
-            <img src="https://github.com/Yina004/The-first-work/blob/main/webwxgetmsgimg.gif" alt="奶茶表情包" class="meme-img">
+            <img src="webwxgetmsgimg.gif" alt="奶茶表情包" class="meme-img">
         </div>
         
         <div class="invitation-text">
@@ -542,4 +542,5 @@
 </body>
 
 </html>
+
 
